updated to fqdn

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -5,7 +5,7 @@
 
   pre_tasks:
     - name: Update apt cache.
-      apt: update_cache=true cache_valid_time=600
+      ansible.builtin.apt: update_cache=true cache_valid_time=600
       when: ansible_os_family == 'Debian'
 
   roles:
@@ -14,7 +14,7 @@
 
   post_tasks:
     - name: Ensure Kibana is running.
-      uri:
+      ansible.builtin.uri:
         url: http://127.0.0.1:5601/login
         status_code: 200
       register: result
